k3s/devserver.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: devserver
  namespace: scienz
spec:
  selector:
    matchLabels:
      app: devserver
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: devserver
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
      containers:
      - image: scienz/aorist-test-devserver
        name: devserver
        command: [ "/bin/bash", "-c", "--" ]
        args: [ "while true; do sleep 30; done;" ]
        volumeMounts:
        - name: devserver-persistent-storage
          mountPath: /var/lib/devserver
        - name: secret-volume
          readOnly: true
          mountPath: "/etc/deploy_key"
      volumes:
      - name: devserver-persistent-storage
        persistentVolumeClaim:
          claimName: devserver-pvc
      - name: secret-volume
        secret:
          secretName: aorist-deploy-key
          defaultMode: 0400
---
