k3s/phabricator.yaml
---
# Source: phabricator/templates/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: phabricator
  labels:
    app.kubernetes.io/name: phabricator
    helm.sh/chart: phabricator-9.1.18
    app.kubernetes.io/instance: phabricator
    app.kubernetes.io/managed-by: Helm
spec:
  type: NodePort
  externalTrafficPolicy: "Cluster"
  ports:
    - name: http
      port: 80
      targetPort: http
      nodePort: 30805
    - name: https
      port: 443
      targetPort: https
      nodePort: 30806
  selector:
    app.kubernetes.io/name: phabricator
    app.kubernetes.io/instance: phabricator
---
# Source: phabricator/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phabricator
  labels:
    app.kubernetes.io/name: phabricator
    helm.sh/chart: phabricator-9.1.18
    app.kubernetes.io/instance: phabricator
    app.kubernetes.io/managed-by: Helm
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: phabricator
      app.kubernetes.io/instance: phabricator
  template:
    metadata:
      labels:
        app.kubernetes.io/name: phabricator
        helm.sh/chart: phabricator-9.1.18
        app.kubernetes.io/instance: phabricator
        app.kubernetes.io/managed-by: Helm
    spec:
      
      hostAliases:
        - ip: "127.0.0.1"
          hostnames:
            - "status.localhost"
      containers:
        - name: phabricator
          image: docker.io/bitnami/phabricator:2020.42.0-debian-10-r0
          imagePullPolicy: "IfNotPresent"
          ports:
            - name: http
              containerPort: 80
            - name: https
              containerPort: 443
          livenessProbe:
            httpGet:
              path: /auth/
              port: http
              httpHeaders:
                - name: Host
                  value: "phabricator"
            initialDelaySeconds: 180
            timeoutSeconds: 5
            failureThreshold: 6
          readinessProbe:
            httpGet:
              path: /auth/
              port: http
              httpHeaders:
                - name: Host
                  value: "phabricator"
            initialDelaySeconds: 30
            timeoutSeconds: 3
            periodSeconds: 5
          resources:
            requests:
              cpu: 300m
              memory: 512Mi
          volumeMounts:
            - name: phabricator-data
              mountPath: /bitnami/phabricator
      volumes:
        - name: phabricator-data
          persistentVolumeClaim:
            claimName: phabricator
